[package]
name = "kormir-server"
version = "0.3.5"
edition = "2021"
authors = ["benthecarman <ben@mutinywallet.com>", "benny b <ben@bitcoinbay.foundation>"]
description = "DLC Oracle RPC Server"
license = "MIT"
documentation = "https://docs.rs/kormir"
homepage = "https://github.com/bennyhodl/kormir"
repository = "https://github.com/bennyhodl/kormir"

[dependencies]
kormir = { version = "1.0.8", features = ["nostr"] }
ddk-messages = { version = "1.0.8", features = ["use-serde"] }

anyhow = "1.0"
axum = "0.7.9"
http-body-util = "0.1.0"
tower-http = { version = "0.6.2", features = ["timeout", "trace","map-request-body", "util"] }
bitcoin = { version = "0.32.2", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
log = "0.4.20"
nostr = "0.40.0"
nostr-sdk = "0.40.0"
pretty_env_logger = "0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.12.0", features = ["full"] }
hex = "0.4.3"
hmac = "0.12.1"            # HMAC implementation
sha2 = "0.10"            # SHA2 hash function (commonly used with HMAC)
